#
#   You should have received a copy of the GNU General Public License
#   along with this program. If not, see <http://www.gnu.org/licenses/>
################################################################################
v0.8.0
- Refactor of core inventory and tiles for streamlined code reuse
- Requirements (python libraries) can be specified for each data module

Landsat
- Added wtemp product (Water temperature, atm corrected with MODTRAN using custom profiles from MERRA data)

MODIS
- fixed bug in MODIS temperature making them unable to be used in project (multiple identical output band names)
- addition of obstime product (observation time for MCD derived products)

CDL
- Updated CDL directory structure to use standard GIPS format (tiledir/datedir)

MERRA
- Updated merra data module

v0.7.1
- Better internal handling of sensors for data where there can be multiple sensors on a single day
- Tile projects (no shapefile or nomosaic set) now creates subdirectories for each tile in project folder
- Project inventories (gips_project inventory) doesn't fail if directory has extraneous files
- datadir option added back allowing saving of files into specified directory

New functionality
- 'gips_project stack' for creating stacks of products in a GIPS project directory
- added mapreduce utilities for multiprocessing
- added 'nomosaic' option to project, which will keep the data as tiles (but still warp)

AOD
- fixed retrieval of Aerosol Optical Depth from MOD08 data

LANDSAT
- products added: dn (digital numbers), volref (volumetric reflectance of water)
- Files read directly from tar.gz (rather than extracting) using GDAL's virtual filesystem

MODIS
- fixed segfault in indices and cleaned up extraneous printing
- fixed nodata value in ndvi8 product

v0.7.0
- Refactoring of inventory classes and printing
- Renaming of products to replace underscores (_) with dashes (-) in the product name
- Addition of gips_project script (print inventory, create browse images)