@@ -22,6 +22,7 @@
 v0.8.0
 - Refactor of core inventory and tiles for streamlined code reuse
 - Requirements (python libraries) can be specified for each data module
+- Interpolation option added to project function (neartest neighbor, bilinear, or cubic)
 
 Landsat
 - Added wtemp product (Water temperature, atm corrected with MODTRAN using custom profiles from MERRA data)
